--- a/public/index.html
+++ b/public/index.html
@@ -342,11 +342,12 @@
             };
           
             try {
-              const res = await fetch("http://localhost:5000/send", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(formData),
+              const res = await fetch("https://portfolio-2sd5.onrender.com/send", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify(formData),
               });
+
           
               const data = await res.json();
               if (data.success) {
